--- a/client/src/pages/signup.css
+++ b/client/src/pages/signup.css
@@ -2,10 +2,18 @@
   display: flex;
   flex-direction: column;
   margin: auto;
-  margin-top: 200px;
-  width: 600px;
+
   background: #fff;
-  padding-bottom: 30px;
+
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  -webkit-font-smoothing: antialised;
+  -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
 }
 .header {
   display: flex;
